--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "taskomnicom",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
